--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -17,9 +17,9 @@
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
                 <i id="createUTubButton" class="bi bi-plus-square-fill fa-2x text-success mx-1"
-                    onclick="showInput('createUTub')"></i>
+                    onclick="showInput('createUTub')">+</i>
                 <i id="deleteUTubButton" class="bi bi-x-square-fill fa-2x text-danger mx-1"
-                    onclick="confirmModal('deleteUTub')" style="display:none"></i>
+                    onclick="confirmModal('deleteUTub')" style="display:none">X</i>
             </div>
         </div>
 
@@ -39,11 +39,11 @@
         <div class="col-3 col-lg-3 mb-md-0 text-right">
             <div class="d-flex justify-content-center flex-row">
                 <i class="bi bi-plus-square-fill fa-2x text-success mx-1" id="createTagButton"
-                    onclick="showInput('createTag')" style="display:none"></i>
+                    onclick="showInput('createTag')" style="display:none">+</i>
                 <i class="bi bi-pencil-square fa-2x text-warning mx-1" id="editTagButton" onclick="editTags('edit')"
-                    style="display:none"></i>
+                    style="display:none">edit</i>
                 <i class="fa fa-check-square fa-2x text-success mx-1" id="submitTagButton" onclick="editTags('submit')"
-                    style="display:none"></i>
+                    style="display:none">submit</i>
             </div>
         </div>
         <div class="deckContent form-group">
@@ -64,11 +64,11 @@
                     <input type="text" id="editUTub" class="userInput">
                 </div>
                 <i id="editUTubButton" class="bi bi-pencil-square fa-2x mx-1" style="display: none; color: #545454"
-                    onclick="editUTub()"></i>
+                    onclick="editUTub()">edit</i>
             </div>
             <div class="col-3 col-lg-3 mb-md-0 text-right">
                 <i id="addURL" class="bi bi-plus-square-fill fa-2x text-success mx-1" style="display: none;"
-                    onclick="showInput('newURLDescription');"></i>
+                    onclick="showInput('newURLDescription');">+</i>
             </div>
         </div>
         <div class="row justify-content-center mx-2">
