--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -41,7 +41,7 @@
     <!-- https://getbootstrap.com/docs/4.3/getting-started/introduction/ -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> -->
 
     <!-- Bootstrap -- local dev -->
     <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
@@ -50,7 +50,7 @@
 
     <!-- FontAwesome -- commented out for local dev -->
     <!-- https://fontawesome.com/v4/get-started/ -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
 
     <!-- Custom -->
     <link rel="stylesheet" href="/static/styles/app.css">
