--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -68,10 +68,10 @@
                     <a class="nav-link" href="{{url_for('main.home')}}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="javascript:;">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="javascript:;">Link</a>
                 </li>
             </ul>
         </div>
@@ -85,17 +85,17 @@
             <ul class="navbar-nav ml-auto">
                 {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
                 <li id="{{current_user.id}}" class="nav-item user">
-                    <a class="nav-link" href="#"> Logged in as {{current_user.username}}</a>
+                    <a class="nav-link" href="javascript:;"> Logged in as {{current_user.username}}</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('users.logout')}}">Logout</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('users.login')}}">Login</a>
+                    <a class="nav-link to-login" href="javascript:;">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link to_register" href="{{url_for('users.register_user')}}">Register</a>
+                    <a class="nav-link to-register" href="javascript:;">Register</a>
                 </li>
                 {% endif %}
             </ul>
