--- a/urls4irl/templates/layout.html
+++ b/urls4irl/templates/layout.html
@@ -14,32 +14,27 @@
     {% endif %}
     {% endblock %}
 
-    <!-- Local Dev -->
     <!-- JS -->
+
     <!-- Add jQuery to aid with DOM manipulation -->
-    <!-- <script src="/static/scripts/jquery-3.6.0.js"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
 
-    <!-- Bootstrap -->
-    <!-- <script src="/static/scripts/bootstrap.min.js"></script>
-    <script src="/static/scripts/bootstrap.bundle.min.js"></script> -->
+    <!-- Add jQuery to aid with DOM manipulation -- local dev -->
+    <script src="/static/scripts/jquery-3.6.0.js"></script>
 
-    <!-- CSS -->
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css"> -->
-    <!-- Local Dev -->
-
-    <!-- Production Packages -- comment out for local dev -->
-    <!-- JS -->
-    <!-- Add jQuery to aid with DOM manipulation -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-    crossorigin="anonymous"></script> 
+    crossorigin="anonymous"></script>  -->
+
+    <!-- Bootstrap -- local dev -->
+    <script src="/static/scripts/bootstrap.min.js"></script>
+    <script src="/static/scripts/bootstrap.bundle.min.js"></script>
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
     <!-- CSS -->
     <!-- Bootstrap -->
@@ -48,17 +43,18 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+    <!-- Bootstrap -- local dev -->
+    <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/styles/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="/static/styles/bootstrap-grid.min.css">
 
-    <!-- FontAwesome -->
+    <!-- FontAwesome -- comment out for local dev -->
     <!-- https://fontawesome.com/v4/get-started/ -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <!-- Production Packages -- comment out for local dev -->
-
     <!-- Custom CSS adjustments -->
     <link rel="stylesheet" href="/static/styles/app.css">
+
 
     <title>URLS4IRL</title>
 </head>
@@ -107,44 +103,24 @@
     </nav>
     <!-- Navigation Bar -->
 
-    {% block mainbody %}
-    {% if current_user.is_authenticated %}
-    <!-- Main Panel View -->
-
-    <main id="mainPanel" class="mx-0 bt-4 pt-0">
-
-        <div id="pageContent" class="row">
-            {% block utubhome %}
-
-            <!-- Page displays here -->
-
-            {% endblock %}
-        </div>
-
-    </main>
-
-    <!-- Main Panel View -->
-
-    {% endif %}
-    {% endblock %}
-
     {% block modal_extender %}
     <!-- Modal -->
+    {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
 
     <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="FormModal"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-
                 <script type="text/javascript">
                     if (document.querySelector('head').childElementCount === 1) {
                         window.location.href = '/home';
                     };
                 </script>
 
-                <form id="NotificationModalForm" name="stepForm" class="form" method="post" action="" novalidate>
+                <form id="ModalForm" name="stepForm" class="form" method="post" action="" novalidate>
                     <div class="modal-header">
-                        <h4 class="modal-title"></h4>
+                        <h4 class="modal-title">Are you sure you want to delete this
+                            UTub?</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -153,11 +129,13 @@
                         This action cannot be undone.
                     </div>
                     <div class="modal-footer">
-                        <button id="modalDismiss" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button id="modalRedirect" type="button" class="btn btn-primary" data-dismiss="modal">Go Somewhere Else</button>
-                        <button id="modalSubmit" type="submit" class="btn btn-danger" data-dismiss="modal">Delete</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button id="submit" type="submit" class="btn btn-danger" data-dismiss="modal">Delete</button>
                     </div>
                 </form>
+            </div>
+        </div>
+    </div>
 
     {% else %}
     <div class="modal fade" id="SplashModal" tabindex="-1" role="dialog" aria-labelledby="FormModal"
@@ -167,8 +145,36 @@
             </div>
         </div>
     </div>
-
+    {% endif %}
     <!-- Modal -->
+    {% endblock %}
+
+    {% block mainbody %}
+    {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
+    <!-- Main Panel View -->
+
+    <main id="mainPanel" class="mx-0 bt-4 pt-0">
+        <!-- Display flash messages on top -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <div class=flashes>
+            {% for category, message in messages %}
+            <div class="alert alert-{{category}}">{{ message }}</div>
+            {% endfor %}
+        </div>
+        {% endif %}
+        {% endwith %}
+
+        <div id="pageContent" class="row">
+            {% block utubhome %}
+            {% endblock %}
+        </div>
+
+    </main>
+
+    <!-- Main Panel View -->
+
+    {% endif %}
     {% endblock %}
 
 </body>
